Ger nu korrekt output för OptimalChargingWindow 2,4,8h